# AnyFX

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  anyfx spec.tex  demo.fx  notepadplusplus-lang.xml
api/: CMakeLists.txt  annotable.cc  annotable.h  debug.h  effectfactory.cc  effectfactory.h  enums.h  vartypes.h
api/code/: afxapi.h  annotable.h  effect.h  effectprogram.cc  effectprogram.h  effectrenderstate.cc  effectrenderstate.h  effectsampler.h  effectshader.cc  effectshader.h  effectvarblock.cc  effectvarblock.h  effectvarbuffer.cc  effectvarbuffer.h  effectvariable.cc  effectvariable.h
api/code/internal/: internaleffectprogram.cc  internaleffectprogram.h  internaleffectrenderstate.cc  internaleffectrenderstate.h  internaleffectsampler.cc  internaleffectsampler.h  internaleffectshader.cc  internaleffectshader.h  internaleffectsubroutine.h  internaleffectvarblock.cc  internaleffectvarblock.cc.bak  internaleffectvarblock.h  internaleffectvarblock.h.bak  internaleffectvarbuffer.cc  internaleffectvarbuffer.h  internaleffectvariable.cc  internaleffectvariable.h
api/code/internal/glsl4/: glsl4effectprogram.cc  glsl4effectprogram.h  glsl4effectrenderstate.cc  glsl4effectrenderstate.h  glsl4effectsampler.cc  glsl4effectsampler.h  glsl4effectshader.cc  glsl4effectvarblock.cc  glsl4effectvarblock.h  glsl4effectvarbuffer.cc  glsl4effectvarbuffer.h  glsl4effectvariable.cc  glsl4effectvariable.h
api/code/loaders/: effectannotationstreamloader.h  effectprogramstreamloader.cc  effectrenderstatestreamloader.cc  effectsamplerstreamloader.cc  effectshaderstreamloader.cc  effectstreamloader.cc  effectsubroutinestreamloader.cc  effectsubroutinestreamloader.h  effectvarblockstreamloader.cc  effectvarblockstreamloader.h  effectvarbufferstreamloader.cc  effectvarbufferstreamloader.h  effectvariablestreamloader.cc  effectvariablestreamloader.h
api/highlevel/: CMakeLists.txt  afxapi.h  effect.h  effectprogram.cc  effectprogram.h  effectrenderstate.cc  effectrenderstate.h  effectsampler.h  effectsubroutine.h  effectvarblock.cc  effectvariable.cc  effectvariable.h
api/highlevel/internal/: internaleffect.h  internaleffectprogram.cc  internaleffectprogram.h  internaleffectrenderstate.h  internaleffectsampler.h  internaleffectshader.h  internaleffectvarblock.cc  internaleffectvarblock.h  internaleffectvarbuffer.h  internaleffectvariable.cc  internaleffectvariable.h
api/highlevel/internal/glsl4/: glsl4effectprogram.cc  glsl4effectprogram.h  glsl4effectrenderstate.cc  glsl4effectrenderstate.h  glsl4effectsampler.cc  glsl4effectvarblock.cc  glsl4effectvarbuffer.cc  glsl4effectvariable.cc  glsl4effectvariable.h
api/highlevel/internal/vk/: vkcontext.cc  vkcontext.h  vkeffectprogram.cc  vkeffectprogram.h  vkeffectrenderstate.cc  vkeffectrenderstate.h  vkeffectsampler.cc  vkeffectsampler.h  vkeffectshader.cc  vkeffectshader.h  vkeffectvarblock.cc  vkeffectvarblock.h  vkeffectvarbuffer.cc  vkeffectvarbuffer.h  vkeffectvariable.cc  vkeffectvariable.h
api/highlevel/loaders/: effectprogramstreamloader.cc  effectrenderstatestreamloader.cc  effectsamplerstreamloader.cc  effectshaderstreamloader.cc  effectstreamloader.cc  effectvarblockstreamloader.cc  effectvarblockstreamloader.h  effectvarbufferstreamloader.cc  effectvarbufferstreamloader.h  effectvariablestreamloader.cc  effectvariablestreamloader.h
api/lowlevel/: CMakeLists.txt  afxapi.h  shadereffect.cc  shadereffect.h  shadertypes.h
api/lowlevel/base/: programbase.cc  programbase.h  renderstatebase.cc  renderstatebase.h  samplerbase.cc  samplerbase.h  shaderbase.cc  shaderbase.h  subroutinebase.cc  subroutinebase.h  varblockbase.cc  varblockbase.h  varbufferbase.cc  varbufferbase.h  variablebase.cc  variablebase.h
api/lowlevel/dx12/: dx12program.cc  dx12program.h  dx12renderstate.cc  dx12renderstate.h  dx12sampler.cc  dx12sampler.h  dx12shader.cc  dx12shader.h  dx12varblock.cc  dx12varblock.h  dx12varbuffer.cc  dx12varbuffer.h  dx12variable.cc  dx12variable.h
api/lowlevel/gl4/: gl4program.cc  gl4program.h  gl4renderstate.cc  gl4renderstate.h  gl4sampler.cc  gl4sampler.h  gl4shader.cc  gl4shader.h  gl4subroutine.cc  gl4subroutine.h  gl4varblock.cc  gl4varblock.h  gl4varbuffer.cc  gl4varbuffer.h  gl4variable.cc  gl4variable.h
api/lowlevel/loaders/: annotationloader.cc  annotationloader.h  programloader.cc  programloader.h  renderstateloader.cc  renderstateloader.h  samplerloader.cc  samplerloader.h  shaderloader.cc  shaderloader.h  streamloader.cc  streamloader.h  subroutineloader.cc  subroutineloader.h  varblockloader.cc  varblockloader.h  varbufferloader.cc  varbufferloader.h  variableloader.cc  variableloader.h
api/lowlevel/mtl/: mtlprogram.cc  mtlprogram.h  mtlrenderstate.cc  mtlrenderstate.h  mtlsampler.cc  mtlsampler.h  mtlshader.cc  mtlshader.h  mtlvarblock.cc  mtlvarblock.h  mtlvarbuffer.cc  mtlvarbuffer.h  mtlvariable.cc  mtlvariable.h
api/lowlevel/vk/: vkprogram.cc  vkprogram.h  vkrenderstate.cc  vkrenderstate.h  vksampler.cc  vksampler.h  vkshader.cc  vkshader.h  vksubroutine.cc  vksubroutine.h  vkvarblock.cc  vkvarblock.h  vkvarbuffer.cc  vkvarbuffer.h  vkvariable.cc  vkvariable.h
compiler/: CMakeLists.txt
compiler/antlr/grammar/: AnyFX.g
compiler/antlr/src/: antlr3convertutf.c
compiler/code/: afxcompiler.cc  afxcompiler.cc.bak  afxcompiler.h  annotation.cc  blendstaterow.h  compileable.cc  compileable.h  constant.cc  datatype.cc  datatype.h  effect.cc  effect.cc.bak  effect.h  effectentrypoint.cc  effectentrypoint.h  function.cc  function.h  functionattribute.h  header.cc  header.h  lexererrorhandler.cc  main.cc  parameter.cc  parameter.h  parsererrorhandler.cc  program.cc  program.cc.bak  program.h  programrow.h  qualifierexpression.cc  qualifierexpression.h  renderstate.cc  renderstate.cc.bak  renderstate.h  renderstaterow.h  sampler.cc  sampler.cc.bak  sampler.h  samplerrow.h  samplerrow.h.bak  (+20 more)
demo/: CMakeLists.txt
demo/code/: demoapp.cc  demoapp.h  main.cc
demo/code/IL/: il.h  ilut.h
demo/code/glm/core/: setup.hpp
util/code/: binreader.cc  binreader.h  binwriter.cc  binwriter.h  types.h  util.h
(+21 files in other folders)
